# bevy-asteroids

./: Cargo.toml
.cargo/: config
src/: components.rs  entities.rs  events.rs  main.rs  resources.rs  utils.rs
src/systems/: input.rs  mod.rs  physics.rs  physics_events.rs  projectile_spawner.rs  screen_wrap.rs  setup.rs  spawner.rs  test_player_bundle.rs  visibility.rs
