[package]
name = "bevy-asteroids"
version = "0.1.0"
authors = ["mthom26 <mthom2626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
bevy_rapier2d = { version = "0.1.1", features = ["parallel"] }
