[package]
name = "bevy-asteroids"
version = "0.1.0"
authors = ["mthom26 <mthom2626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.1.3", features = ["wav"] }
bevy_rapier2d = { version = "0.1.1", features = ["parallel"] }
# bevy_rapier2d = { git = "https://github.com/mthom26/bevy_rapier", branch = "master", features = ["parallel"] }
